--- a/dhcp-client-container.service
+++ b/dhcp-client-container.service
@@ -1,6 +1,12 @@
 [Unit]
 Description=A DHCP client (dhclient)
+Requires= network.target
+After= network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/docker run -d --net=host --cap-add=net_admin -e INTERFACE=enp0s25 --name dhcp-client-container dhcp-client-container
+ExecStart=/usr/bin/docker run --rm --user root --net=host --cap-add=net_admin -e INTERFACE=enp0s25 dhcp-client-container
+
+[Install]
+WantedBy=multi-user.target
+
