--- a/dhcp-client-container.service
+++ b/dhcp-client-container.service
@@ -5,7 +5,7 @@ After= network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/docker run --rm --user root --net=host --cap-add=net_admin -e INTERFACE=enp0s25 dhcp-client-container
+ExecStart=/usr/bin/docker run --rm --user root --net=host --cap-add=net_admin -e INTERFACES=enp0s25 dhcp-client-container
 
 [Install]
 WantedBy=multi-user.target
